# IB

./: Cmake.sh  README.md  plantilla.txt
practicas/practica1/: hello_world  hello_world.cc
practicas/practica6/P06-make/: Makefiles.sh  add_one_second.cc  cuenta_atras.cc  division.cc  harmonic_numbers.cc  horas_min.cc  interval.cc  max_of_3.cc  upper_lower_letters.cc
problemas/: a.out  acronimos.cc  add1sec.cc  angulo.cc  ball.cc  book  calculadora_1.cc  calculadora_inf.cc  chacho  char-num.cc  classify_char1.cc  cm-pulgadas.cc  collatz.cc  combiancion.cc  crimson.cc  cuadri  divisores.cc  dos  ecuacion2ºgrado.cc  edad.cc  entre4.cc  espar.cc  estriangulo.cc  eucluides.cc  eucluides2.cc  fibonacci.cc  first_cubes.cc  func_fact.cc  func_suma.cc  heron.cc  huevos.cc  inf  integer_division_rest.cc  longest_word.cc  max_of_2.cc  max_of_3.cc  min-may_palabra.cc  most_frequent.cc  multiply_long.cc  num-char.cc  (+25 more)
problemas/Libro/: Makefile  libros.cc  libros.h  libros_main  libros_main.cc
problemas/copypaste/: copypaste.cc  texto2.txt
problemas/delete_word/: delete_word.cc  texto1.txt  texto2.txt
problemas/fich_par_impar/: a.out  fich_par_impar.cc  impares.txt  numeros.txt  pares.txt
problemas/horario/: CMakeLists.txt  horario.Doxyfile
problemas/horario/include/: horario.h
problemas/horario/src/: Makefile  horario  horario.cc  horario_main.cc
problemas/not_same_txt/: not_same_txt.cc  texto2.txt
problemas/personas/: Makefile  gente.txt  persona  persona.cc  persona_main.cc
problemas/sin_espacios/: remove  sin_espacios.cc  texto1.txt  texto2.txt
problemas/text_line/: linear  text_line.cc  texto1.txt  texto2.txt
snap/exercism/5/.config/exercism/: user.json
snap/exercism/5/exercism/cpp/hello-world/.exercism/: metadata.json
